--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,3 +28,11 @@ jobs:
     # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
+      
+      name: Parent Workflow
+
+
+  child-workflow:
+    runs-on: ubuntu-latest
+    name: Child Workflow
+    uses: ./.github/workflows/blank.yml
