--- a/.github/workflows/VarConfig.yml
+++ b/.github/workflows/VarConfig.yml
@@ -1,29 +1,27 @@
-# This is a basic workflow to help you get started with Actions
+name: ' Custom Env Vars'
 
-Name: ' Custom Env Vars'
-
-on: 
+on:
      workflow_dispatch: 
+
 env: 
      Day_Of_Week: Funday
      testvar: value-1
  
 jobs: 
      mainjob: 
-     name: 'Print the env vars' 
-     runs-on: ubuntu-latest 
+          name: 'Print the env vars' 
+          runs-on: ubuntu-latest 
 
-    env: 
-      Greeting: Dear 
-      testvar: value-2 
+          env: 
+               Greeting: Dear 
+               testvar: value-2 
 
-steps : 
-- name: print-values-of-env-vars 
-     run: |
-echo "$Greeting $First_Name. Today is " 
-echo "testvar $testvar" 
-echo "testvar ${{ env.testvar}}" 
-
-   env:
-First Name: Student 
-testvar: value-3 
+          steps : 
+          - name: print-values-of-env-vars 
+               run: | 
+               echo "$Greeting $First_Name. Today is " 
+               echo "testvar $testvar" 
+               echo "testvar ${{ env.testvar}}" 
+               env:
+                    First_Name: Student 
+                    testvar: value-3 
